prevented btn-overlay from appearing on small screened devices

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -264,7 +264,7 @@ li {
   .row-no-mobile {
     display: none;
   }
-  .overlay {
+  .overlay, .btn-overlay {
     display: none;
   }
   .scroll-fixed {
